[package]
name = "grssp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11.4"
indicatif = "0.17.8"
log = "0.4.22"
